# supply-api-django

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pyproject.toml.swp  Dockerfile  Dockerfile.dev  Makefile  README.md  instruction.md  manage.py  pyproject.toml  requirements.txt  run-django.sh
SupplyAPI/: asgi.py  settings.py  urls.py  wsgi.py
api/: admin.py  apps.py  auth.py  filters.py  groups.py  middleware.py  models.py  resend.py  serializers.py  signals.py  super_admin.py  tokens.py  urls.py  utils.py  views.py
api/migrations/: 0001_initial.py  0002_rename_itemno_inspectionacceptancereport_item_and_more.py  0003_rename_datecreated_inspectionacceptancereport_created_at_and_more.py  0004_item_totalcost.py  0005_alter_inspectionacceptancereport_created_at_and_more.py
api/templates/: activation_failed.html  activation_success.html
